Updated image URLs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>RJ-Talk on ReactJS</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -34,13 +34,13 @@
 				</section>
 				<section>
 					<section>
-						<img src="https://cdn.meme.am/cache/instances/folder196/500x/76681196/mohanlal-why-why-react.jpg"></img>
+						<img src="http://i.imgur.com/HPvEZAV.jpg"></img>
 					</section>
 					<section>
-						<img src="https://cdn.meme.am/cache/instances/folder287/500x/76681287/raga-paper-i-can-put-on-my-resume-and-be-valuable.jpg/" />
+						<img src="http://i.imgur.com/WbnWf2P.jpg" />
 					</section>
 					<section>
-						<img src="https://cdn.meme.am/cache/instances/folder326/500x/76681326/ajit-money-money-money-better-salary-package.jpg" />
+						<img src="http://i.imgur.com/I0TjoUB.jpg" />
 						<img id="react-pay" src="http://i.imgur.com/wIFvki7.png" />
 					</section>
 					<section>
@@ -49,8 +49,8 @@
 					</section>
 					<section>
 						<h4>Why so complex !</h4>
-						<img src="https://cdn.meme.am/cache/instances/folder485/500x/76681485/rajinikanth-why-should-i-learn-soething-whichtakes-around-20k-files-for-hello-world.jpg" />
-						<img src="https://cdn.meme.am/cache/instances/folder557/500x/76681557/jackie-chan-react-es6-webpack-rollup-reduxmobx.jpg" />
+						<img src="http://i.imgur.com/RYsvBh7.jpg" />
+						<img src="http://i.imgur.com/NAMLtbb.jpg" />
 					</section>
 				</section>
 				<section>
@@ -61,7 +61,7 @@
 						<li>Undirectional Data Flow</li>
 						<li>Virtual DOM</li>
 						<li>Declarative Programming</li>
-						<li>React Native - Extending to Mobile World</li>
+						<li>React Native & PWA - Extending to Mobile World</li>
 					</ul>
 				</section>
 				<section>
@@ -123,7 +123,7 @@
 					<h4>Declarative vs Imperative</h4>
 					<div class="side-by-side">
 						<h4>Declarative</h4>
-						<img src="https://cdn.meme.am/cache/instances/folder846/500x/76693846/narendra-modi-2-implement-demonetization.jpg" />
+						<img src="http://i.imgur.com/jbqgwxD.jpg" />
 					</div>
 					<div class="side-by-side">
 						<h4>Imperative</h4>
@@ -139,6 +139,21 @@
 					<h4>Declarative vs Imperative</h4>
 					<p data-height="392" data-theme-id="0" data-slug-hash="LyNmro" data-default-tab="js" data-user="ranjithnair" data-embed-version="2" data-pen-title="Declarative vs Imperative" class="codepen">See the Pen <a href="https://codepen.io/ranjithnair/pen/LyNmro/">Declarative vs Imperative</a> by Ranjith (<a href="http://codepen.io/ranjithnair">@ranjithnair</a>) on <a href="http://codepen.io">CodePen</a>.</p>
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+				</section>
+				<section>
+					<h4>React Native & PWA</h4>
+					<div class="side-by-side">
+						<img src="http://i.imgur.com/sjhH7iD.png" />
+					</div>
+					<div class="side-by-side">
+						<img src="http://i.imgur.com/om5846w.png" />
+					</div>
+					<div class="side-by-side">
+						<img src="http://i.imgur.com/IFJ3kun.png" />
+					</div>
+					<div class="side-by-side">
+						<img src="http://i.imgur.com/lRoU9YD.png" />
+					</div>
 				</section>
 			</div>
 		</div>
